[package]
name = "homectl"
version = "0.1.0"
authors = ["arprv <arprv@protonmail.com>"]
edition = "2018"

[dependencies]
color_processing = "0.3"
pnet_datalink = "0.22.0"
structopt = { version = "0.2", default-features = false }

[profile.dev]
debug = true

[profile.release]
opt-level = "z"
debug = false
lto = true
